Added new stuff around property service
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1001 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -53,4 +53,9 @@
         destination="userServiceRemote"
         showBusyCursor="true"/>
 
+    <granite:SecureRemoteObject
+        id="configurationService"
+        destination="configurationServiceRemote"
+        showBusyCursor="true"/>
+
 </mx:Canvas>
