--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/ModuleManagementView.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/ModuleManagementView.mxml
@@ -49,7 +49,6 @@
             [In]
             [Bindable]
             public var identity:Identity;
-
             [In]
             [Bindable]
             public var modelLocator:ModelLocator;            
@@ -58,14 +57,6 @@
             public var moduleLocator:ModuleLocator;
         
             private function init():void {
-                newBtn.enabled = true;
-                saveBtn.enabled = false;
-                deleteBtn.enabled = false;
-                enableTextFields(false);
-            }
-            
-            //[Observer("MODULE_CONFIG_CHANGED")]
-            public function moduleConfigChanged():void {
                 newBtn.enabled = true;
                 saveBtn.enabled = false;
                 deleteBtn.enabled = false;
@@ -191,38 +182,33 @@
 
     <mx:StringValidator minLength="1" tooShortError="Modulename is required" source="{moduleNameTxt}" required="true" property="text"/>
     <mx:StringValidator minLength="1" tooShortError="URL is required" source="{urlTxt}" required="true" property="text"/>
-
-		<mx:Panel height="255" backgroundColor="#EAFF00" backgroundAlpha="0.5" width="815" layout="absolute" x="10" y="10" title="Modules">
-			<mx:List id="modulesGrid" dataProvider="{modelLocator.allModules}" labelField="moduleName" dragEnabled="true" dropEnabled="true" dragMoveEnabled="true" dragDrop="onDragComplete(event);" width="300" x="10" y="10" height="195" itemClick="onRowClick(event)" />
-			<mx:Canvas height="195" x="318" y="10" width="466">
-			<mx:Form width="100%">
-				<mx:FormItem label="Modulename" required="true" x="10" y="10" >
-				    <mx:TextInput id="moduleNameTxt" x="95" y="8" width="301" change="onChange()" text="{modelLocator.selectedModule.moduleName}" />
-				</mx:FormItem>
-				<mx:FormItem label="URL" required="true" x="10" y="40" >
-    				<mx:TextInput id="urlTxt" x="95" y="38" width="301" change="onChange()" text="{modelLocator.selectedModule.url}" />
-                </mx:FormItem>
-                <mx:FormItem label="Description" x="10" y="70" >
-    				<mx:TextInput id="descriptionTxt" x="95" y="68" width="301" change="onChange()" text="{modelLocator.selectedModule.description}" />
-                </mx:FormItem>
-                <mx:FormItem label="Load on Startup" x="10" y="100" >
-                    <mx:CheckBox id="loadOnStartupChk" change="onChange()" x="95" y="98" selected="{modelLocator.selectedModule.loadOnStartup}"/>
-                </mx:FormItem>
-			</mx:Form>
-            <mx:Button id="newBtn" label="New" x="10" y="140" click="newModule()" />
-            <mx:Button id="saveBtn" label="Save" x="67" y="140" click="saveModule()"/>
-            <mx:Button id="deleteBtn" label="Delete" x="129" y="140" click="deleteModule()"/>
-            <mx:Button id="loadBtn" label="{(modelLocator.selectedModule == null || modelLocator.selectedModule.loaded) ? 'Unload' : 'Load'}" x="200" y="140" click="loadModule()" enabled="{(modelLocator.selectedModule == null || modelLocator.selectedModule.moduleName == '') ? false : true}"/>
-			</mx:Canvas>
-		</mx:Panel>
-       <!-- 
-	<mx:Panel width="100%" backgroundColor="#EAFF00" backgroundAlpha="0.5" y="310" layout="absolute" x="10" height="255" title="Views and Menu Items">
-		<mx:Label x="10" y="13" text="MenuItems provided by this Module"/>
-		<mx:Tree x="10" y="39" height="166" width="205"></mx:Tree>
-		<mx:List x="223" y="39" height="166" width="160"></mx:List>
-		<mx:List x="391" y="39" height="166" width="260"></mx:List>
-		<mx:Label x="223" y="13" text="Views included in Module"/>
-		<mx:Label x="391" y="13" text="Context Menus provided by Module"/>
-	</mx:Panel>
-     -->
+		<mx:HBox x="10" y="10" width="95%" verticalAlign="middle" backgroundColor="#EAFF00" backgroundAlpha="0.5">
+		    <mx:Label x="10" y="10" text="Modules" fontSize="24"/>
+		</mx:HBox>
+		<mx:HRule x="9" y="53" width="95%"/>
+		<mx:VBox width="95%" x="10" y="63">
+				<mx:Canvas height="255" backgroundColor="#EAFF00" backgroundAlpha="0.5" width="100%">
+					<mx:List id="modulesGrid" dataProvider="{modelLocator.allModules}" labelField="moduleName" dragEnabled="true" dropEnabled="true" dragMoveEnabled="true" dragDrop="onDragComplete(event);" width="300" x="10" y="10" height="235" itemClick="onRowClick(event)" />
+					<mx:Canvas height="235" x="318" y="10">
+					<mx:Form width="100%">
+						<mx:FormItem label="Modulename" required="true" x="10" y="10" >
+						    <mx:TextInput id="moduleNameTxt" x="95" y="8" width="301" change="onChange()" text="{modelLocator.selectedModule.moduleName}" />
+						</mx:FormItem>
+						<mx:FormItem label="URL" required="true" x="10" y="40" >
+							<mx:TextInput id="urlTxt" x="95" y="38" width="301" change="onChange()" text="{modelLocator.selectedModule.url}" />
+						         </mx:FormItem>
+					          <mx:FormItem label="Description" x="10" y="70" >
+					          <mx:TextInput id="descriptionTxt" x="95" y="68" width="301" change="onChange()" text="{modelLocator.selectedModule.description}" />
+					          </mx:FormItem>
+					          <mx:FormItem label="Load on Startup" x="10" y="100" >
+					              <mx:CheckBox id="loadOnStartupChk" change="onChange()" x="95" y="98" selected="{modelLocator.selectedModule.loadOnStartup}"/>
+					          </mx:FormItem>
+					</mx:Form>
+					      <mx:Button id="newBtn" label="New" x="10" y="140" click="newModule()" />
+					      <mx:Button id="saveBtn" label="Save" x="67" y="140" click="saveModule()"/>
+					      <mx:Button id="deleteBtn" label="Delete" x="129" y="140" click="deleteModule()"/>
+					      <mx:Button id="loadBtn" label="{(modelLocator.selectedModule == null || modelLocator.selectedModule.loaded) ? 'Unload' : 'Load'}" x="200" y="140" click="loadModule()" enabled="{(modelLocator.selectedModule == null || modelLocator.selectedModule.moduleName == '') ? false : true}"/>
+					</mx:Canvas>
+				</mx:Canvas>
+		</mx:VBox>
 </mx:Canvas>
