--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/FileUploadDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/FileUploadDialog.mxml
@@ -25,7 +25,7 @@
 	horizontalScrollPolicy="off" creationComplete="initComp();" title="File Upload" fontSize="12">
 
     <mx:Metadata>
-        [Name("fileUploadDialog")]
+        [Name]
         [ManagedEvent(name="LOAD_ALL_USERS")]
     </mx:Metadata>
 
